initial file structure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "FormulaOne",
   "version": "1.0.0",
   "description": "Web application rendering stats from Formula 1",
-  "main": "app.js",
+  "main": ".js/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
